kubernetes/pagopa/destination-rules.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  generation: 1
  name: egressgateway-for-gad-test-pagopa-gov-it
  namespace: default
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: gad-test-pagopa-gov-it
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 80
        tls:
          mode: ISTIO_MUTUAL
          sni: gad.test.pagopa.gov.it
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  generation: 1
  name: originate-mtls-for-gad-test-pagopa-gov-it
  namespace: default
spec:
  host: gad.test.pagopa.gov.it
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        caCertificates: /etc/nginx-ca-certs/ca-chain.cert.pem
        clientCertificate: /etc/nginx-client-certs/tls.crt
        mode: MUTUAL
        privateKey: /etc/nginx-client-certs/tls.key
        sni: gad.test.pagopa.gov.it
