kubernetes/pagopa/servicentry.yaml
---
apiVersion: v1
kind: List
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: ServiceEntry
  metadata:
    generation: 1
    name: gad-test-pagopa-gov-it
    namespace: default
  spec:
    hosts:
    - gad.test.pagopa.gov.it
    ports:
    - name: http-port
      number: 80
      protocol: HTTP
    - name: https
      number: 443
      protocol: HTTPS
    resolution: DNS
