kubernetes/pagopa/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  generation: 1
  name: direct-gad-test-pagopa-gov-it-through-egress-gateway
  namespace: default
spec:
  gateways:
  - istio-egressgateway
  - mesh
  hosts:
  - gad.test.pagopa.gov.it
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
        subset: gad-test-pagopa-gov-it
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
    route:
    - destination:
        host: gad.test.pagopa.gov.it
        port:
          number: 443
      weight: 100
